--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset='UTF-8'>
     <title>Landing Page</title>
     <link rel='stylesheet' href='style.css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
@@ -12,9 +13,9 @@
     <div class="header">
       <img src="https://images.pexels.com/photos/708513/pexels-photo-708513.jpeg" alt="heart made of fruit by Sydney Troxell" height=120>
       <div class="links-container">
-          <a href="https://en.wikipedia.org/wiki/List_of_colors_(compact)">List of colors</a>
-          <a href="https://en.wikipedia.org/wiki/List_of_colors_by_shade">List of shades</a>
-          <a href="https://en.wikipedia.org/wiki/Color_theory">Color theory</a>
+          <a href="links/colors.html">Color chart</a>
+          <a href="links/wheel.html">Color wheel</a>
+          <a href="links/theory.html">Color theory</a>
       </div>
     </div>
 
