--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     
     <div class="header">
-      <img src="https://images.pexels.com/photos/708513/pexels-photo-708513.jpeg" alt="heart made of fruit by Sydney Troxell" height=120>
+      <img title="Heart of Fruit by Sydney Troxell" src="https://images.pexels.com/photos/708513/pexels-photo-708513.jpeg" alt="heart made of fruit by Sydney Troxell" height=120>
       <div class="links-container">
           <a href="links/colors.html">Color chart</a>
           <a href="links/wheel.html">Color wheel</a>
@@ -26,11 +26,11 @@
           <div class="subtitle">Feed the eyes!</div>
           <button>Sign up</button>
         </div>
-        <img src="images/pexels-steve-johnson-1704120.jpg" alt="painted rainbow by Steve Johnson" width=450 height=250>
+        <img title="Painted Rainbow by Steve Johnson" src="images/pexels-steve-johnson-1704120.jpg" alt="painted rainbow by Steve Johnson" width=450 height=220>
       </div>
 
       <div class="container-2">
-        <div class="info-container">Examples of colorful rainbow art</div>
+        <div class="info-container">Some colorful rainbow art</div>
         <div class="card-container">
           <div class="card">
             <img src="images/pexels-alexander-grey-1428169.jpg" alt="paint mixed together by Alexander Grey" height=100 width=120>
@@ -61,9 +61,7 @@
           <div class="action">Sign up now!</div>
           <div>Fill your life with a kaleidoscope of color by clicking here!</div>
         </div>
-        <div class="button-container">
-          <button>Sign up</button>
-        </div>
+        <button>Sign up</button>
       </div>
 
     </div>
